[GR-10828] Implement Windows OS logging support for simple Hello World.